Cleaned up routes and pages

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "firebase": "^5.5.9",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "mdbreact": "^4.8.3",
     "react": "^16.6.3",
     "react-apollo": "^2.2.4",
     "react-bootstrap": "^0.32.4",
