--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
     "apollo-boost": "^0.1.19",
+    "autosuggest-highlight": "^3.1.1",
     "firebase": "^5.5.9",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
