--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
     "apollo-boost": "^0.1.19",
     "autosuggest-highlight": "^3.1.1",
     "firebase": "^5.5.9",
-    "graphql": "^14.0.2",
+    "graphql": "^0.13.0",
     "graphql-tag": "^2.10.0",
     "mdbreact": "^4.8.3",
     "react": "^16.6.3",
