--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-apollo": "^2.2.4",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
+    "react-icons-kit": "^1.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "reactstrap": "^6.5.0"
